--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Game of Life</title>
-  <script type="module" src="game.ts"></script>
+  
 
   <style>
     #canvas {
@@ -14,7 +14,7 @@
       margin-top: 10px;
     }
   </style>
-</head>
+<script type="module" crossorigin src="./index-1ydsg4kz.js"></script></head>
 
 <body>
   <div>
